<resources>
    <string name="app_name">MovieApp</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pre_sort_label">Sort By</string>
    <string name="pre_sort_key" translatable="false">sort</string>
    <string name="pre_sort_defualt" translatable="false">1</string>
    <string-array name="pref_sort_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="pref_sort_option">
        <item>Popularity</item>
        <item>Top-Rated</item>
        <item>Favourites</item>
    </string-array>
    <string name="title_activity_detail_movie">MovieDetail</string>
    <string name="overview">Overview</string>
    <string name="rate">Rate</string>
    <string name="release">Release</string>
    <string name="title">Title</string>
    <string name="movieposter">moviePoster</string>
    <string name="fav_movie">fav_movie</string>
    <string name="trailer">Trailer</string>
    <string name="play">play</string>
    <string name="title_activity_trailer">Trailers</string>
    <string name="title_activity_review">Reviews</string>
</resources>
