<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MovieDetailFragment"
    tools:showIn="@layout/activity_movie_detail">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="10"
        android:contextClickable="false"
        android:foregroundGravity="fill_vertical"
        android:orientation="vertical"
        >


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/grid_item_movie_height"
            android:layout_weight="4">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/title"
                android:id="@+id/title_movie"
                android:background="#26a69a"
                android:layout_gravity="top"
                android:textSize="@dimen/abc_text_size_headline_material"
                android:textColor="#ffffff"
                android:gravity="center_vertical"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_below="@+id/title_movie"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:weightSum="5"
                android:id="@+id/linearLayout">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/poster_movie"
                    android:contentDescription="@string/movieposter"
                    android:src="@drawable/download"
                    android:layout_weight="2" />

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_weight="3"
                    android:layout_height="match_parent">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:id="@+id/favMovie"
                        android:contentDescription="@string/fav_movie"
                        android:src="@drawable/off"
                        android:background="@null"
                        android:layout_gravity="left"
                        android:adjustViewBounds="true"
                        android:scaleType="fitStart" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/rate"
                        android:id="@+id/rate_movie"
                        android:textSize="25sp"
                        android:textIsSelectable="false"
                        android:layout_gravity="left"
                        android:layout_weight="1"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceMedium"
                        android:text="@string/release"
                        android:id="@+id/release_movie"
                        android:textSize="25sp"
                        android:layout_gravity="left"
                        android:layout_weight="1"/>
                </LinearLayout>

            </LinearLayout>

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/overview"
            android:id="@+id/overView"
            android:layout_weight="1" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
        <Button
            android:id="@+id/trailerButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Trailers"/>
        <Button
            android:id="@+id/reviewButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Reviews"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
